CDS-868 Fix SonarCube critical issues on archetype-validator, dadl-binding and openehr-rm-core